--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/styled-engine": "^5.15.14",
     "@mui/system": "^5.15.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
